stops flicker

--- a/stylesheets/navobile.css
+++ b/stylesheets/navobile.css
@@ -47,6 +47,12 @@
       top: -100%;
       width: 80%;
       z-index: -1;
+      
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -ms-transform: translateX(0);
+      -o-transform: translateX(0);
+      transform: translateX(0);
     }
 
     .navobile-bound .navobile-navigation {
